# LearninFromSemicolon

./: .gitignore
axum_course/: Cargo.toml
axum_course/src/: ctx.rs  main.rs  models.rs  server.rs  server_test.rs
axum_course/src/auth_middleware/: mod.rs  mw_auth.rs  mw_auth_test.rs
axum_course/src/login_api/: errors.rs  mod.rs
axum_course/src/login_api/web/: mod.rs  routes_login.rs  routes_login_test.rs
axum_course/src/rest_api/: mod.rs  model.rs  routes_tickets.rs  routes_tickets_test.rs
axum_course/src/server_log_line/: log.rs
axum_course/src/static_routes/: mod.rs  routes.rs  routes_test.rs
axum_production_from_jeremy_chone/: Cargo.toml
axum_production_from_jeremy_chone/src/: error.rs  main.rs  main_test.rs
axum_production_from_jeremy_chone/src/model/: login.rs  mod.rs  params_basic.rs
axum_production_from_jeremy_chone/src/web/: mod.rs  routes_basic.rs  routes_login.rs
axum_repetition_production/: Cargo.toml
axum_repetition_production/src/: error.rs  main.rs  main_test.rs
axum_repetition_production/src/ctx/: extractor.rs
axum_repetition_production/src/log/: mod.rs  request_log_line.rs
axum_repetition_production/src/model/: ticket.rs
axum_repetition_production/src/web/: mod.rs  mw_auth.rs  routes_basic.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
basics/: Cargo.toml
basics/data/: dockerdownload.txt
basics/src/: fileexample.rs  iterexamples.rs  main.rs  matchexamples.rs  readfromfileexample.rs  structexamples.rs  threadsexample.rs
basics/src/tests/: exampletotest.rs  exampletotest_test.rs  mod.rs
basics/src/topics/: asyncexamples.rs  enumexamples.rs  fileexample.rs  genericsexample.rs  httpexamples.rs  jsonexamples.rs  loopexamples.rs  macroexamples.rs  mod.rs  restexample.rs  threadsexample.rs
crud/: Cargo.toml  Dockerfile
crud/docker/: docker-compose.yml  init.sql
crud/src/: controller.rs  main.rs  model.rs  user_services.rs
derivemacros/: Cargo.toml
derivemacros/reflective-derive/: Cargo.toml
derivemacros/reflective-derive/src/: lib.rs
derivemacros/src/: main.rs
docker_tests/postgres_dockerfile/: docker-compose.yml
docker_tests/postgres_dockerfile/testing_db_connection/: Cargo.toml
docker_tests/postgres_dockerfile/testing_db_connection/src/: main.rs
more_free_backend/: Cargo.toml  docker-compose.yml
more_free_backend/src/: controller.rs  db_interaction.rs  main.rs  model.rs  server.rs  server_test.rs  websockets.rs
more_free_backend/src/db_interactions/: controllers.rs  mod.rs  models.rs  service.rs
repetitionindocker/: Cargo.toml  Dockerfile
repetitionindocker/src/: main.rs
rust-web-app-E01-START/: Cargo.toml  README.md
rust-web-app-E01-START/.cargo/: config.toml
rust-web-app-E01-START/examples/: gen_key.rs  quick_dev.rs
rust-web-app-E01-START/fields_macro/: Cargo.toml
rust-web-app-E01-START/fields_macro/src/: lib.rs
rust-web-app-E01-START/sql/dev-initial/: 00-recreate-db.sql  01-create-schema.sql
rust-web-app-E01-START/src/: config.rs  error.rs  main.rs
rust-web-app-E01-START/src/_dev_utils/: dev_db.rs  mod.rs
rust-web-app-E01-START/src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
rust-web-app-E01-START/src/log/: mod.rs
rust-web-app-E01-START/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
rust-web-app-E01-START/src/model/store/: error.rs  mod.rs
rust-web-app-E01-START/src/utils/: error.rs  mod.rs
rust-web-app-E01-START/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs
rust-web-app-E01-START/src/web/rpc/: mod.rs  task_rpc.rs
