[package]
name = "axum_course"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
lazy-regex = "3.3.0"
reqwest = {version = "0.12.9", features = ["cookies", "blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
strum_macros = "0.26.4"
tokio = { version = "1.41.1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = {version = "1", features = ["v4","fast-rng",]}

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
