[package]
name = "axum_production_from_jeremy_chone"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
lazy-regex = "3.3.0"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
strum_macros = "0.26.4"
tokio = { version = "1.41.1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = {version = "1.11.0", features = ["v4","fast-rng"]}
