[package]
name = "axum_repetition_production"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
lazy-regex = "3.3.0"
reqwest = { version = "0.12.9", features = ["json", "cookies"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strum_macros = "0.26.4"
tokio = { version = "1.42.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = {version = "1.11.0", features = ["v4","fast-rng"]}
