[package]
name = "crud"
version = "0.1.0"
edition = "2021"

[dependencies]

# webserver
axum = "0.7.7"

# json serialization
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

# database, sqlx allows you to write sql queries, maybe yoy would like an ORM instead like Disel
sqlx = { version = "0.8.2", features = ["postgres", "macros", "runtime-tokio-native-tls"] }

# async functions
tokio = { version = "1.41.0", features = ["full"] }

