[package]
name = "opticode_tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart", "ws"] }
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
