[package]
name = "opticode_tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.8", features = ["multipart", "ws"] }
chrono = "0.4.38"
dotenv = "0.15.0"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.132"
sqlx = {version="0.8.2", features = ["postgres", "macros", "runtime-tokio-native-tls"]}
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "*"
