[package]
name = "testing_db_connection"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenv = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.6.3", features = ["postgres", "macros", "runtime-tokio-native-tls"]} 
tokio = { version = "1.41.1", features = ["full"] }
